--- a/CodeChallenge1/Base.lproj/Main.storyboard
+++ b/CodeChallenge1/Base.lproj/Main.storyboard
@@ -1,25 +1,167 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="9w1-LL-ggi">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Answer-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gAt-fs-N3Y">
+                                <rect key="frame" x="30" y="100" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="0n8-2G-aQB"/>
+                                    <constraint firstAttribute="height" constant="30" id="JnV-vn-VOE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mYg-9Z-bAM">
+                                <rect key="frame" x="190" y="100" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="1Pv-eL-2Gu"/>
+                                    <constraint firstAttribute="height" constant="30" id="ChU-dp-y2W"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="x" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JDb-DP-9pC">
+                                <rect key="frame" x="156" y="104" width="9" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pg6-C4-bwd">
+                                <rect key="frame" x="128" y="150" width="65" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="65" id="dMR-Am-6rN"/>
+                                    <constraint firstAttribute="height" constant="30" id="vO0-cN-9VE"/>
+                                </constraints>
+                                <state key="normal" title="Calculate">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="calculateButton:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="wz1-xf-Uzs"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="JDb-DP-9pC" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" constant="104" id="2mh-uG-oQr"/>
+                            <constraint firstAttribute="centerX" secondItem="Pg6-C4-bwd" secondAttribute="centerX" id="6To-Dd-NlC"/>
+                            <constraint firstItem="mYg-9Z-bAM" firstAttribute="leading" secondItem="JDb-DP-9pC" secondAttribute="trailing" constant="25" id="Lgj-L8-ZaM"/>
+                            <constraint firstItem="gAt-fs-N3Y" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" constant="100" id="TyA-9z-NAe"/>
+                            <constraint firstItem="Pg6-C4-bwd" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" constant="150" id="cTk-Pe-nta"/>
+                            <constraint firstItem="mYg-9Z-bAM" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" constant="100" id="fSm-GT-exx"/>
+                            <constraint firstItem="JDb-DP-9pC" firstAttribute="leading" secondItem="gAt-fs-N3Y" secondAttribute="trailing" constant="26" id="pdG-8C-b1D"/>
+                            <constraint firstAttribute="centerX" secondItem="JDb-DP-9pC" secondAttribute="centerX" id="zsk-eV-FMG"/>
+                        </constraints>
                     </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Answer" id="dVA-xU-32f">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="a7J-0t-1HW">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="5Rh-zL-UJf">
+                                <rect key="frame" x="-23" y="-15" width="71" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="web">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="XKj-Su-OcC" kind="push" id="wU8-2x-ocE"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="firstMultiplier" destination="gAt-fs-N3Y" id="TiF-7u-70n"/>
+                        <outlet property="secondMultiplier" destination="mYg-9Z-bAM" id="7wh-D8-Vpp"/>
+                        <outlet property="webButton" destination="5Rh-zL-UJf" id="6nz-Od-7fG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="766" y="345"/>
+        </scene>
+        <!--Web View Controller-->
+        <scene sceneID="tO7-d7-njL">
+            <objects>
+                <viewController id="XKj-Su-OcC" customClass="WebViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Ren-6h-Ns7"/>
+                        <viewControllerLayoutGuide type="bottom" id="bwr-h6-FaD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="f2Z-u4-sqH">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ifq-09-YEt">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="delegate" destination="XKj-Su-OcC" id="3y6-yi-bx4"/>
+                                </connections>
+                            </webView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="qaW-s6-9xL">
+                                <rect key="frame" x="150" y="274" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="LgY-bm-OgQ"/>
+                                    <constraint firstAttribute="width" constant="20" id="r8W-fe-qBC"/>
+                                </constraints>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="qaW-s6-9xL" secondAttribute="centerX" id="A0o-Cd-0NI"/>
+                            <constraint firstItem="ifq-09-YEt" firstAttribute="top" secondItem="f2Z-u4-sqH" secondAttribute="topMargin" id="BRt-bI-Xbs"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ifq-09-YEt" secondAttribute="trailing" constant="-16" id="CDB-5g-agi"/>
+                            <constraint firstItem="ifq-09-YEt" firstAttribute="leading" secondItem="f2Z-u4-sqH" secondAttribute="leadingMargin" constant="-16" id="CcJ-3g-4ty"/>
+                            <constraint firstAttribute="centerY" secondItem="qaW-s6-9xL" secondAttribute="centerY" id="oUV-3m-Bbu"/>
+                            <constraint firstItem="ifq-09-YEt" firstAttribute="bottom" secondItem="f2Z-u4-sqH" secondAttribute="bottomMargin" id="y2G-YO-P5D"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="cTJ-AI-6M2"/>
+                    <connections>
+                        <outlet property="activityIndicator" destination="qaW-s6-9xL" id="in0-Zh-U0n"/>
+                        <outlet property="webView" destination="ifq-09-YEt" id="2Wp-Vl-NcW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kcf-gq-7Qi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1170" y="347"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="9LB-x3-R14">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9w1-LL-ggi" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1Lx-eA-AUz">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="AdH-fb-dZs"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="n0B-6V-ZQr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="234" y="345"/>
         </scene>
     </scenes>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
